      source and output directories.
    - Fixed a bug which prevented kernel modules linked from precompiled kernel
      interface object files from being loaded on recent Linux kernels. This
      affected custom packages which were prepared with nvidia-installer's
      --add-this-kernel option, for example.

  [ Luca Boccassi ]
  * Update nv-readme.ids.

 -- Luca Boccassi <bluca@debian.org>  Wed, 23 Mar 2022 00:09:33 +0000

nvidia-graphics-drivers (510.54-1) experimental; urgency=medium

  * New upstream production branch release 510.54 (2022-02-14).
    - Fixed a bug that could cause GPU exceptions when minimizing a fullscreen
      Vulkan application on certain desktops, such as Plasma.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream.
  * Declare Testsuite: autopkgtest-pkg-dkms.
  * Disable building nvidia-cuda-mps.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 02 Mar 2022 12:00:52 +0100

nvidia-graphics-drivers (510.47.03-1) experimental; urgency=medium

  * New upstream production branch release 510.47.03 (2022-02-01).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.  (Closes: #1004847)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Added support for Vulkan 1.3.
  * New upstream beta 510.39.01 (2022-01-11).
    - Added a new daemon, nvidia-powerd, to provide support for
      the Dynamic Boost feature on supported systems. Dynamic Boost
      balances power between the CPU and the GPU for improved performance.
      For more details, see the "Dynamic Boost on Linux" chapter in the README.
    - Updated nvidia-bug-report.sh to search the systemd journal for
      nvidia-powerd logs.
    - Fixed several issues which caused the supported-gpus.json file to
      contain incorrect product information.
    - Added a new module parameter, "peerdirect_support", to the