@@ -26,12 +26,12 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
  #
 --- a/Makefile
 +++ b/Makefile
-@@ -112,7 +112,7 @@ else
+@@ -114,7 +114,7 @@ else
    # cannot be defined in the *Kbuild files, which are only used during stage 1.
  
    %-linux.o: modules
--	$(LD) $(NV_MODULE_COMMON_SCRIPT) -r -o $@ \
-+	$(LD) $(or $(KBUILD_LDFLAGS),$(LDFLAGS)) $(NV_MODULE_COMMON_SCRIPT) -r -o $@ \
+-	$(LD) $(NV_MODULE_COMMON_SCRIPTS) -r -o $@ \
++	$(LD) $(or $(KBUILD_LDFLAGS),$(LDFLAGS)) $(NV_MODULE_COMMON_SCRIPTS) -r -o $@ \
  	  $(subst nv,nvidia,$*).mod.o $(subst nv,nvidia,$*)/$*-interface.o
  
    # Kbuild's "clean" rule won't clean up the conftest headers on its own, and
